--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Guangjian</title>
+    <style>
+
+        body{
+            background-color: beige;
+            color: blueviolet;
+
+        }
+        .container{
+            display: flex;
+            flex-direction: row;
+
+        }
+        .cell{
+            padding: 10px;
+            margin: 20px;
+        }
+
+        
+    </style>
+</head>
+<body>
+      <h1>Welcome to my pages!</h1>
+    <div class="container">
+        <div class="cell">Yuxuan</div>
+        <div class="cell">Guangjian</div>
+        <div class="cell">LiLi</div>
+      
+    </div>
+</body>
+</html>
