--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
         .cell{
             padding: 10px;
             margin: 20px;
+width: 300px;
+            height: 300px;
+            background-color: chartreuse;
         }
+.cell-2{
+background-color:darkcyan;
+}
 
         
     </style>
