--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@ background-color:darkcyan;
 <body>
       <h1>Welcome to my pages!</h1>
     <div class="container">
-        <div class="cell">Yuxuan</div>
-        <div class="cell">Guangjian</div>
-        <div class="cell">LiLi</div>
-      
+     <div class="cell"><a href="https://www.google.com/">Yuxuan Bao</a></div>
+        <div class="cell cell-2"><a href="./img/guangjian.png">Guangjian</a></div>
+        <div class="cell">LiLi</div> 
     </div>
 </body>
 </html>
