--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         </div>
         <div class="cell cell-6">
-            <p>Email:guangjianbao@gmail.com</p>
-            <p>Tel:646-244-7294</p>
+            <p>Email:guangxxxx@gmail.com</p>
+            <p>Tel:646-244-xxxx</p>
         </div>
         
     </div>
